adjusts calendar picker color, and fixes a z-index bug caused by CSS filter

--- a/sass/parts/header.scss
+++ b/sass/parts/header.scss
@@ -2,6 +2,7 @@
 
 .header {
     //display: none; // remove after footer is done lol
+    z-index: 1;
     position: fixed;
     top: 0;
     left: 0;
